--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ click==8.1.7
 cssselect2==0.7.0
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+WTForms==3.1.2
+python-dotenv==1.0.1
 fonttools==4.55.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
